--- a/VRChat/13/1312613.html
+++ b/VRChat/13/1312613.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "L9M3S9cDIJDHHHIpsTkzq0bROLA3Bz1n4X47QDMmWp0="></script>
+    "/UHumnbQ0sNGhVdcBm4DiVBSGK+KVnPdKaVWMh7tIhE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Healing Spell Effect - VFX Graph Unity 3D 2018.3","description":"A healing spell effect to be used for game project.\n\nYour can set up colour heal spell effect.\n \nThis is effect made by VFX Graph Unity 2018.3 with HDRP. So your must have Unity 3D with specification that and install visual effect graph in Unity 3D before import package and used it.\n\nThe file in unity package format.\n\n● Contents\n\n1. VFX Graph File Data.\n2. Demo Scene.\n3. All Texture data for VFX.\n\nFor detail your can see here:\nhttps://youtu.be/yEsvUQJI8Eg\n\n● About Commercial Use\n\n- Your are free to use this VFX for any commercial game project but please inform me if your use it for commercial purpose and you can just put my name in your credits.\nI will be appreciate it so much for it.\n\n● End of User Term\n\n- Please don't redistribute this VFX in public.\n\n- Your may modified this VFX, but your can not redistribute the modified VFX in to public. \n\n\n● Contacts for information\nTwitter : https://twitter.com/prayogoaphen26\nEmail : prayyogo@gmail.com\n","url":"https://booth.pm/ja/items/1312613","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/83516dac-a76b-4f8c-a8f9-37d02b8ff155/i/1312613/b287c882-543b-4c05-9d4f-5761c9a5878c_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="L9M3S9cDIJDHHHIpsTkzq0bROLA3Bz1n4X47QDMmWp0="></script>
+    nonce="/UHumnbQ0sNGhVdcBm4DiVBSGK+KVnPdKaVWMh7tIhE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -412,9 +412,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
