--- a/VRChat/75/1196175.html
+++ b/VRChat/75/1196175.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "fqguxz//l2p1hjh9DDcHHK2khl+BD9D9+hdmY3M67I4="></script>
+    "iTmqUwU0vIfRdheDuAcRk0TjxYab/QlydvekVNfTfp8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ティラノサウルスの化石　3Dモデル","description":"・モデルの改造可能です。\n・総頂点83,227\n　ローポリ総頂点48,915\n・テクスチャ等は含まれておりません。\n\n\n【免責事項】\n\n・本データの利用において、何らかの不都合が生じたとしても当方は責任を負いかねますのでご了承ください。\n・条件についての内容は予告なく変更する場合があります。\n\n【使用条件】\n\n・本データの改造利用には制限を設けませんが、データの再配布は禁止とします。\n　ゲーム等の用途としてデータが梱包されるのは問題ありません。\n・商用利用も問題ありません。\n・VRアバター、VTuber、ゲーム利用等の使用も問題ありません。\n・第三者の収益動画・配信等に映り込むことも問題ありません。\n\n【内容物】\n .fbx \n .fbx(ローポリ) \n .blend \n .pmx \n .mqo\n  のティラノサウルスの化石モデル計五つとblenderでのレンダリング画像です。\n\n\n【連絡先】\n何か連絡事項がありましたら。\n\nTwitter : はむくん(@hamukun7arupaka)\nhttps://twitter.com/hamukun7arupaka\n\nまでリプライかDMをお願いします。","url":"https://booth.pm/ja/items/1196175","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/240cbdc7-f16b-41af-9137-5d42b7e4cdae/i/1196175/314edb2a-0a6a-4daa-8303-80f65d2365ec_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="fqguxz//l2p1hjh9DDcHHK2khl+BD9D9+hdmY3M67I4="></script>
+    nonce="iTmqUwU0vIfRdheDuAcRk0TjxYab/QlydvekVNfTfp8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -385,9 +385,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
