--- a/VRChat/97/1311797.html
+++ b/VRChat/97/1311797.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "29bIRR50idF3Pjb+xJ2/CN3JyrvMbTAdTuvapG5q94w="></script>
+    "p22FSZFOuZZIFDlUllLBQGKIEMFBtb/qkPZeH3AR728="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"『魔法少女まどか☆マギカ』ソウルジェム","description":"本商品は魔法少女まどか☆マギカに出てくる登場人物たちの5つのソウルジェムを含んでいます。\n \n好みによって変更することができるジェムで、FBXの形をしています このジェムはワールド製作のための小品や貴方のアバターのための装身具として使用することができます。 \n\nダウンロードするzipファイルには、インポートするためのUnity package fileが含まれており、追加のshaderは必要ありません。","url":"https://booth.pm/ja/items/1311797","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/6344d16d-d329-4c8c-868d-1539711b7048/i/1311797/22fd57d8-1166-4274-ac46-15c7b84bb273_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="29bIRR50idF3Pjb+xJ2/CN3JyrvMbTAdTuvapG5q94w="></script>
+    nonce="p22FSZFOuZZIFDlUllLBQGKIEMFBtb/qkPZeH3AR728="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -403,9 +403,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
