--- a/VRChat/61/1311861.html
+++ b/VRChat/61/1311861.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "ZQIyp9SbtbNf7AL2M3WfS9cHap57f3mqhkbPQpE0/kg="></script>
+    "yGVb47ueLcn7Cp7MzJRYXoo2k7oFdMqgth8VBNxLQuE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"蒸籠と饅頭","description":"竹で出来た蒸籠と饅頭（マントウ）です。　蒸籠（△8108）　肉まん（△704）\n蒸籠は蓋が別オブジェクトになっており、外せるようになっています。\n饅頭の中身は空っぽなので、餡や具を詰めて肉まんやあんまんにすることもできます。\n\n【内容物】\n・bun.fbx\n・bun.png\n・bun.unitypackage\n・seiro.fbx\n・seiro.png\n・seiro.unitypackage\n・seiro_outline.png\n","url":"https://booth.pm/ja/items/1311861","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/740fc37b-7996-42b7-93bb-9fb07e71227a/i/1311861/75362a6e-5f54-4a2d-8221-1f77b7c942ff_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ZQIyp9SbtbNf7AL2M3WfS9cHap57f3mqhkbPQpE0/kg="></script>
+    nonce="yGVb47ueLcn7Cp7MzJRYXoo2k7oFdMqgth8VBNxLQuE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -370,9 +370,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
