--- a/VRChat/21/1311821.html
+++ b/VRChat/21/1311821.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "Sb4DL+ZL86Rv07Byw5Y+bksG13+z9cnJVRkL4yQz46k="></script>
+    "Z1HWpmzWnRuAxoi3aU2BlPMsvB4x6xpqNQuylVqOvVk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRoid用衣装テクスチャ】ふしぎな国のワンピース","description":"VRoid用のワンピーステクスチャです。\nワンピース、ニーソックス、リボン用のテクスチャと\nおまけ程度ですがリボンつきローファーを同梱しております。\n・ご支援版には色違いワンピース各種（黒・赤・緑）、ソックス2種を同梱\n・赤/緑版はワンピース単体テクスチャのみとなります\n\nVRoid Hub 着用モデル\nふしぎな国のワンピース\nhttps://hub.vroid.com/characters/5023144384918621263/models/6256103826272232424\nふしぎな国のワンピース（黒）\nhttps://hub.vroid.com/characters/5023144384918621263/models/5690056751945092091\n\nモデル衣装設定\n・袖の広がり…38\n・袖の絞り…100\n・スカートの広がり…26\n異なる設定でもお楽しみいただけます。\n袖の広がりはMAXでも可愛いです。\n\n・アップデートのお知らせ\n遅くなりましたが、「ご支援版」においてご要望いただきました\n「靴下部分以外を透過して別のスキンと合わせることができるもの」\nを追加致しました。よろしければ「ご支援版v2→○○_靴下のみ」データをご活用ください。\n\n・データ改変…可\n・動画配信（商用を含む）やVRCHATでの使用…可\n・再配布…不可　改変したものを含む","url":"https://booth.pm/ja/items/1311821","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"350","highPrice":"1000"},"image":"https://booth.pximg.net/c/620x620/4406079a-4509-4860-9645-53e9a6ea2ca6/i/1311821/39408f67-59c3-42c7-96e1-06f98ae4bb68_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Sb4DL+ZL86Rv07Byw5Y+bksG13+z9cnJVRkL4yQz46k="></script>
+    nonce="Z1HWpmzWnRuAxoi3aU2BlPMsvB4x6xpqNQuylVqOvVk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -679,9 +679,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
