--- a/VRChat/79/1310679.html
+++ b/VRChat/79/1310679.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "qWJyrpY4h1jRhJYYGd4gMO74CRUBQAPJFaVz0QliA4M="></script>
+    "Lz49VD6TmPmy/xsjWc9S2y0eSv2hFJdhLzD6fPUo1qQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナルアバター「クロム」","description":"VRChat用のオリジナルアバターとしてデザインしました。自分が好きな属性を詰め込んでアクリルフィギュアとした一品となります。\n\n※この商品はpixivFACTORYで作られた商品です。サンプル画像は完成イメージのため、実物と異なる場合があります。","url":"https://booth.pm/ja/items/1310679","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"1630","highPrice":"6400"},"image":"https://booth.pximg.net/c/620x620/910d2185-7a24-4894-921d-59d04d16ede5/i/1310679/50659de6-7d7c-4f63-a8a7-023a1d7dd07f_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="qWJyrpY4h1jRhJYYGd4gMO74CRUBQAPJFaVz0QliA4M="></script>
+    nonce="Lz49VD6TmPmy/xsjWc9S2y0eSv2hFJdhLzD6fPUo1qQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -683,9 +683,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
