--- a/VRChat/64/1310364.html
+++ b/VRChat/64/1310364.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "z3/lkQU0+/vIrSYt519mBGPO7glYrfDiKRaCYfS3Dkk="></script>
+    "UhM1XSeFaWF7yhvRLin5XrOLPrpgN4CeAe30ouxPWWk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"iPod nano 7th","description":"最初に自分で作ったアバター(のつもりでしたが装飾品にも使えることを知った)モデリング品です。\n\nーーーーーーーーーー\n更新履歴\n\n2019/04/09 配布用release modelをアップロード\n\nーーーーーーーーーー\n\nこのモデルは基本的に何に使用してもらっても構いません。\nアバターとして使用することは可能です(一応)\nもちろん装飾品として身につけることも出来ます(2枚目の写真参考)\nただ作りが少々甘いため画像差し替え等の作業は個々でお願いすることになります。\n\nただし私が変に手を加えたところがあるかもしれないです。もしあった場合は申し訳ないです。(基本的に配布用に取り除いたつもりですが)\n\nーーーーーーーーーー\n製品のステータス\n\nポリゴン数：552\nメッシュ：1\nマテリアル：3\n配布形式：zip\n内容：readme、unitypack、fbx、texture、Materialなどを入れてあります。\n\nーーーーーーーーーー\n\n※この商品は黒胡椒様のご協力により完成しました。ありがとうございます。\n\nーーーーーーーーーー\nもし使用した場合は以下の条件を承認したことになります。\n・このモデルは基本使用は許容します。\n・改変もOKです。\n・モデルの用途は問いません\n・ただし「改変なしでの転載」は侵害行為として通報させていただきます。\n・改変モデルの再配布等は事前に一声お声掛けください(無いと思いますが...)\n\nわやのTwitter\n@wayamoti2015\n\nーーーーーーーーーー\nVersion1.2.ReleaseModel","url":"https://booth.pm/ja/items/1310364","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/dc8505e6-9e5b-4a2a-a952-0e4e03651483/i/1310364/cebba09b-f7ab-404e-98e7-a5812279cbc7_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="z3/lkQU0+/vIrSYt519mBGPO7glYrfDiKRaCYfS3Dkk="></script>
+    nonce="UhM1XSeFaWF7yhvRLin5XrOLPrpgN4CeAe30ouxPWWk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -390,9 +390,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
