--- a/VRChat/66/1309266.html
+++ b/VRChat/66/1309266.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "qV8SpSN6Ag4hNDiduQ/73Q3A5Hi2PxE11WdIqRgEK8w="></script>
+    "lnN4dWJbqDz4idxlyPF/X1zYK8GDbRW2rbR9VWfLezI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat レコード再生V2.0","description":"概要\nvr自宅用に作った音楽再生装置\nhttps://twitter.com/hosikuzuwitch/status/1186578082838134784\n気が向いたらアップデート\n\n\n使い方\nレコード→ディスク の中にある\nAudio Source の Audio Clip に再生したい音楽を入れるだけ\n\n内容\n無料版\n再生用のSDK2のしくみだけ\n\n\n有料版\n本体付き\nSDK3-2020.07.16.10.33対応のうどん\n\nv1.0\n公開\n\nv1.1\nスプリングジョイントを使った位置調整機能追加\n\nv1.2\n 共通\nVRCアップデートでスプリングジョイントが動かなくなっていたのと\n音楽が再生されなくなっていたのを修正\n 無料版\nそれっぽい色を付けたキューブをモデルとして追加\n 有料版\n'Real Materials Vol.0'を外して単色マテリアルへ変更\n\nv2.0\nSDK3-2020.07.16.10.33への対応\n\n連絡先\nTwitter : @hosikuzuwitch\ndiscord : wizcat#2493\n","url":"https://booth.pm/ja/items/1309266","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"800"},"image":"https://booth.pximg.net/c/620x620/29e1e122-13d8-4681-a53c-d6a3da5745a8/i/1309266/326c299c-8003-4302-aa0d-b2d8664ffeb3_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="qV8SpSN6Ag4hNDiduQ/73Q3A5Hi2PxE11WdIqRgEK8w="></script>
+    nonce="lnN4dWJbqDz4idxlyPF/X1zYK8GDbRW2rbR9VWfLezI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -173,7 +173,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      110
+                                      111
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -189,7 +189,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      110
+                                      111
                                     </div>
                                   </div></a>
                                 </div>
@@ -498,9 +498,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
