--- a/VRChat/50/1308750.html
+++ b/VRChat/50/1308750.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "kdEL7L4F/OFzApIZnO9taLN9yJTh/DWiK2KOUd4sL3M="></script>
+    "kQ+ca2LdTxjcP2xhy09c0D6k8t8jd6kQQgjbRkpMp0s="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【無料】指輪2 15個セット","description":"溜まったのでまた出します。\nNo,16～No,30の計15個のセット\n\nセット内容\n　README\n　指輪（リング）No．１６～３０\n　指輪見本（JPG）\n\nポリゴンは△224～△1568と少し多め\n例のごとくUV展開は一切しておらず、マテリアルでのみの配色となっております。","url":"https://booth.pm/ja/items/1308750","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/b192de80-ab9a-405c-a8c2-559c78ffe3e6/i/1308750/914a0cdc-e9ce-41f2-82d2-f72d400fa68a_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="kdEL7L4F/OFzApIZnO9taLN9yJTh/DWiK2KOUd4sL3M="></script>
+    nonce="kQ+ca2LdTxjcP2xhy09c0D6k8t8jd6kQQgjbRkpMp0s="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -426,9 +426,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
