--- a/VRChat/65/1307965.html
+++ b/VRChat/65/1307965.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "1J91dKORxUdxM3fvnt/+cWveZAImD5WP1K4sQPGlvNU="></script>
+    "rEV8lYN4R9X+G2FWRoBy6YxfEUExKYXNgpeL2APy0HQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ロク君と神の3Dモデル（VRChat）","description":"ちゃお～。神だよ。\n\n\nロク君と神を足して２で割った感じのフルスクラッチモデルだよ。とってもシンプルだよ。テクスチャは使ってないよ。だから色は自由に変えてね。\n\nCats Blender Plugin を使って、VRChat 用にセットアップしたけど、神は VRChat をやったことないから、実際にどうなるかは分からないよ。怖いなあ。\n\n\nロク君の異世界転生の様子を記録してる僕の YouTube チャンネルで、このモデルの元になった僕とロク君が見れるよ。\nhttps://www.youtube.com/channel/UCRoHcDmHrKp3PdNeIr6hnTA","url":"https://booth.pm/ja/items/1307965","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/319cad60-8015-4026-bd5d-4a8aad1c72d6/i/1307965/92adf19e-8190-4291-9a54-331018e78c80_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="1J91dKORxUdxM3fvnt/+cWveZAImD5WP1K4sQPGlvNU="></script>
+    nonce="rEV8lYN4R9X+G2FWRoBy6YxfEUExKYXNgpeL2APy0HQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -403,9 +403,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
